# nl_joke_val

./: .gitignore
api/: .env  api.go  backup.go  clips.go  config.go  emotes.go  go.mod  go.sum  main.py  migrate.go  setup.sql  test.html  time-series.go  topClipFinder.go
api/clip_splicer/: builder.py  missing_clips.txt  test.sql
api/db/: init-ssl.sh  remote.env
api/nl_api_bruno/routes/: all_time_hero.bru  bruno.json  clip_counts.bru  clip_thumbnail.bru  init_top_clips.bru  refresh_top_clips_store.bru  top_clips_cached.bru
app/: .eslintrc.json  .eslintrc.yml  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/src/: api.ts  app.tsx  hooks.ts  routeTree.gen.ts  schema.ts  types.ts  utils.ts
app/src/app/: MostMinusTwosClips.tsx  TopTwitchClips.tsx  TwitchClipThumbnail.tsx  apiURL.ts  chart.tsx  clip-clients.tsx  clip-server.tsx  dashboard.tsx  hooks.ts  layout.tsx  minus-two-clips.tsx  (+5 more)
clip_splicer/: clips.txt  main.py
clip_splicing/: builder.py  main.py  pyproject.toml  requirements.txt  twitch.py
clip_splicing/clip_splicer/: clips.json  test.sql
emote_tracking/: api.go  clips.go  config.go  emote_counter.go  emotes.go  go.mod  go.sum  migrate.go  series.go  time-series.go
front/: app.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
front/components/: BarChart.vue  BelovedClip.vue  ClipLabel.vue  ClipViewer.vue  CustomClip.vue  HatedClip.vue  TwitchClip.vue
front/plugins/: highcharts.client.ts  vercel.client.ts
new-front/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
(+38 files in other folders)
