[project]
name = "clip-splicing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "moviepy>=2.2.1",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "typing-extensions>=4.15.0",
    "yt-dlp>=2025.9.26",
]
